Sampling on same set of predictors

--- a/SamplingStatsAndDistros.ipynb
+++ b/SamplingStatsAndDistros.ipynb
@@ -65,10 +65,29 @@
         "!git config --global user.name \"Amineh Dadsetan\""
       ],
       "metadata": {
-        "id": "noffZ0wtGZku"
+        "id": "noffZ0wtGZku",
+        "outputId": "7c8d6c8f-f421-49b1-ddf4-55e2fd73f333",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fatal: cannot change to 'AminehTechnicalWritings': No such file or directory\n",
+            "Cloning into 'AminehTechnicalWritings'...\n",
+            "remote: Enumerating objects: 229, done.\u001b[K\n",
+            "remote: Counting objects: 100% (226/226), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (145/145), done.\u001b[K\n",
+            "remote: Total 229 (delta 131), reused 140 (delta 79), pack-reused 3\u001b[K\n",
+            "Receiving objects: 100% (229/229), 3.32 MiB | 5.98 MiB/s, done.\n",
+            "Resolving deltas: 100% (131/131), done.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -81,12 +100,12 @@
       ],
       "metadata": {
         "id": "rAx5tYe5GnY9",
-        "outputId": "0b005ce7-e1b6-43a5-a396-ed27275fdd39",
+        "outputId": "f6dc75ea-0b6d-497b-cbee-9540ddc32f50",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -96,7 +115,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 4
         }
       ]
     },
@@ -130,9 +149,11 @@
         "### How to perform sampling given values for a set of predictors\n",
         "\n",
         "\n",
-        "Let's look at the population mean and sample mean for the data set we have created in previous notebooks.\n",
+        "A sample is a set of observations, with each observation consisting of predictors and a response. In the current context, we are interested in the set of all samples, that share the very same set of predictors.\n",
+        "A question may arise that how is it possible to have same set of predictors but different responses, aren't predictors going to determined the response after all? Answer is that although there is a strong relationship response between predictors and response, there is uncertainty in the model as well that we call irreducable error.\n",
         "\n",
-        "But before that lets do some randome samplings of samples of size 100 that share the same predictors (`x_samples`)\n"
+        "Lets use our data set. The predictors are kept in `population[:,0]`, one dimensional numbers, ranging from 1 to 10. Let's pick a set of distinct predictors of size 100 called `x_samples`. HERE!!!\n",
+        "\n"
       ],
       "metadata": {
         "id": "bk7tGdeg2uis"
@@ -141,43 +162,46 @@
     {
       "cell_type": "code",
       "source": [
-        "print(population[:, 0])\n",
-        "len(population[:,0])\n",
         "distinct_xs = np.unique(population[:, 0])\n",
-        "print(len(distinct_xs))\n",
         "sample_size = 100\n",
         "x_samp_index = np.linspace(0, len(distinct_xs)-1, sample_size).astype(int)\n",
         "x_samples = distinct_xs[x_samp_index]\n",
-        "x_samples\n",
-        "n_repeat = len(population[:,0]) // len(distinct_xs)\n",
-        "n_repeat"
+        "print(f'Set of predictors {x_samples=}')"
       ],
       "metadata": {
         "id": "zCDURIavHXqp",
-        "outputId": "dc1c0ce6-6ec0-410a-8654-a71ffca19b66",
+        "outputId": "87826d0c-df4f-4a8b-ae69-b1f5a3331f24",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[ 1.  1.  1. ... 10. 10. 10.]\n",
-            "30\n"
+            "x_samples=array([ 1.        ,  1.        ,  1.        ,  1.        ,  1.31034483,\n",
+            "        1.31034483,  1.31034483,  1.62068966,  1.62068966,  1.62068966,\n",
+            "        1.62068966,  1.93103448,  1.93103448,  1.93103448,  2.24137931,\n",
+            "        2.24137931,  2.24137931,  2.24137931,  2.55172414,  2.55172414,\n",
+            "        2.55172414,  2.86206897,  2.86206897,  2.86206897,  3.17241379,\n",
+            "        3.17241379,  3.17241379,  3.17241379,  3.48275862,  3.48275862,\n",
+            "        3.48275862,  3.79310345,  3.79310345,  3.79310345,  3.79310345,\n",
+            "        4.10344828,  4.10344828,  4.10344828,  4.4137931 ,  4.4137931 ,\n",
+            "        4.4137931 ,  4.72413793,  4.72413793,  4.72413793,  4.72413793,\n",
+            "        5.03448276,  5.03448276,  5.03448276,  5.34482759,  5.34482759,\n",
+            "        5.34482759,  5.34482759,  5.65517241,  5.65517241,  5.65517241,\n",
+            "        5.96551724,  5.96551724,  5.96551724,  5.96551724,  6.27586207,\n",
+            "        6.27586207,  6.27586207,  6.5862069 ,  6.5862069 ,  6.5862069 ,\n",
+            "        6.89655172,  6.89655172,  6.89655172,  6.89655172,  7.20689655,\n",
+            "        7.20689655,  7.20689655,  7.51724138,  7.51724138,  7.51724138,\n",
+            "        7.51724138,  7.82758621,  7.82758621,  7.82758621,  8.13793103,\n",
+            "        8.13793103,  8.13793103,  8.44827586,  8.44827586,  8.44827586,\n",
+            "        8.44827586,  8.75862069,  8.75862069,  8.75862069,  9.06896552,\n",
+            "        9.06896552,  9.06896552,  9.06896552,  9.37931034,  9.37931034,\n",
+            "        9.37931034,  9.68965517,  9.68965517,  9.68965517, 10.        ])\n"
           ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "10000"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 6
         }
       ]
     },
@@ -200,6 +224,8 @@
     {
       "cell_type": "code",
       "source": [
+        "n_repeat = len(population[:,0]) // len(distinct_xs)\n",
+        "\n",
         "rand_gen = np.random.default_rng(2)\n",
         "X_grouped = population[:,0].reshape(len(distinct_xs), n_repeat)\n",
         "\n",
@@ -326,6 +352,9 @@
         "### Sample statistic and their sampling disribution\n",
         "\n",
         "ADD definition of sampling distribution + explain what is the process of sampling involved to graph a sampling distribution of a measure such as mu (HERE!!!)\n",
+        "\n",
+        "Let's look at the population mean and sample mean for the data set we have created in previous notebooks.\n",
+        "\n",
         "\n",
         "We have got a array of sample means.\n",
         "Let's inspect into that array."
