sample y for given predictors

--- a/SamplingStatsAndDistros.ipynb
+++ b/SamplingStatsAndDistros.ipynb
@@ -65,29 +65,10 @@
         "!git config --global user.name \"Amineh Dadsetan\""
       ],
       "metadata": {
-        "id": "noffZ0wtGZku",
-        "outputId": "7c8d6c8f-f421-49b1-ddf4-55e2fd73f333",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "noffZ0wtGZku"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "fatal: cannot change to 'AminehTechnicalWritings': No such file or directory\n",
-            "Cloning into 'AminehTechnicalWritings'...\n",
-            "remote: Enumerating objects: 229, done.\u001b[K\n",
-            "remote: Counting objects: 100% (226/226), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (145/145), done.\u001b[K\n",
-            "remote: Total 229 (delta 131), reused 140 (delta 79), pack-reused 3\u001b[K\n",
-            "Receiving objects: 100% (229/229), 3.32 MiB | 5.98 MiB/s, done.\n",
-            "Resolving deltas: 100% (131/131), done.\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -100,12 +81,12 @@
       ],
       "metadata": {
         "id": "rAx5tYe5GnY9",
-        "outputId": "f6dc75ea-0b6d-497b-cbee-9540ddc32f50",
+        "outputId": "6e4c57d0-7746-4963-c389-4e4d3a5279dd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -115,7 +96,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -152,11 +133,18 @@
         "A sample is a set of observations, with each observation consisting of predictors and a response. In the current context, we are interested in the set of all samples, that share the very same set of predictors.\n",
         "A question may arise that how is it possible to have same set of predictors but different responses, aren't predictors going to determined the response after all? Answer is that although there is a strong relationship response between predictors and response, there is uncertainty in the model as well that we call irreducable error.\n",
         "\n",
-        "Lets use our data set. The predictors are kept in `population[:,0]`, one dimensional numbers, ranging from 1 to 10. Let's pick a set of distinct predictors of size 100 called `x_samples`. HERE!!!\n",
+        "Lets use our data set. The predictors are kept in `population[:,0]`, one dimensional numbers, ranging from 1 to 10. Let's pick a set of distinct predictors of size 100 called `x_samples`. I use `np.linspace` to sample 100 evenly spaced x's.\n",
         "\n"
       ],
       "metadata": {
         "id": "bk7tGdeg2uis"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "dOVySbYFEpde"
       }
     },
     {
@@ -165,50 +153,18 @@
         "distinct_xs = np.unique(population[:, 0])\n",
         "sample_size = 100\n",
         "x_samp_index = np.linspace(0, len(distinct_xs)-1, sample_size).astype(int)\n",
-        "x_samples = distinct_xs[x_samp_index]\n",
-        "print(f'Set of predictors {x_samples=}')"
+        "x_samples = distinct_xs[x_samp_index]"
       ],
       "metadata": {
-        "id": "zCDURIavHXqp",
-        "outputId": "87826d0c-df4f-4a8b-ae69-b1f5a3331f24",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "zCDURIavHXqp"
       },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "x_samples=array([ 1.        ,  1.        ,  1.        ,  1.        ,  1.31034483,\n",
-            "        1.31034483,  1.31034483,  1.62068966,  1.62068966,  1.62068966,\n",
-            "        1.62068966,  1.93103448,  1.93103448,  1.93103448,  2.24137931,\n",
-            "        2.24137931,  2.24137931,  2.24137931,  2.55172414,  2.55172414,\n",
-            "        2.55172414,  2.86206897,  2.86206897,  2.86206897,  3.17241379,\n",
-            "        3.17241379,  3.17241379,  3.17241379,  3.48275862,  3.48275862,\n",
-            "        3.48275862,  3.79310345,  3.79310345,  3.79310345,  3.79310345,\n",
-            "        4.10344828,  4.10344828,  4.10344828,  4.4137931 ,  4.4137931 ,\n",
-            "        4.4137931 ,  4.72413793,  4.72413793,  4.72413793,  4.72413793,\n",
-            "        5.03448276,  5.03448276,  5.03448276,  5.34482759,  5.34482759,\n",
-            "        5.34482759,  5.34482759,  5.65517241,  5.65517241,  5.65517241,\n",
-            "        5.96551724,  5.96551724,  5.96551724,  5.96551724,  6.27586207,\n",
-            "        6.27586207,  6.27586207,  6.5862069 ,  6.5862069 ,  6.5862069 ,\n",
-            "        6.89655172,  6.89655172,  6.89655172,  6.89655172,  7.20689655,\n",
-            "        7.20689655,  7.20689655,  7.51724138,  7.51724138,  7.51724138,\n",
-            "        7.51724138,  7.82758621,  7.82758621,  7.82758621,  8.13793103,\n",
-            "        8.13793103,  8.13793103,  8.44827586,  8.44827586,  8.44827586,\n",
-            "        8.44827586,  8.75862069,  8.75862069,  8.75862069,  9.06896552,\n",
-            "        9.06896552,  9.06896552,  9.06896552,  9.37931034,  9.37931034,\n",
-            "        9.37931034,  9.68965517,  9.68965517,  9.68965517, 10.        ])\n"
-          ]
-        }
-      ]
+      "execution_count": 4,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "We sampled 100 distinct x and stored them in `x_samples`. There are several observations for each x in sample and thus several responses in the population. Thus we can have several sampling with given `x_samples`. Let's pick one such sample:"
+        "Now let's sample responses for given set of predictors. I use a method called `sample_response` that takes set of predictors, the whole population, as well as a rand generator. HERE!!!"
       ],
       "metadata": {
         "id": "ethR8N-tJBj2"
