--- a/notebookes/SamplingStatsAndDistros.ipynb
+++ b/notebookes/SamplingStatsAndDistros.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/aminehd/AminehTechnicalWritings/blob/main/SamplingStatsAndDistros.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/aminehd/AminehTechnicalWritings/blob/main/notebookes/SamplingStatsAndDistros.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -74,14 +74,13 @@
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
-        "files = np.load(local_clone + '/population.npz')\n",
-        "# sample = np.load(local_clone + '/sample.npy'\n",
+        "files = np.load(local_clone + '/data/population.npz')\n",
         "population = files['arr_0']\n",
         "population.shape"
       ],
       "metadata": {
         "id": "rAx5tYe5GnY9",
-        "outputId": "6e4c57d0-7746-4963-c389-4e4d3a5279dd",
+        "outputId": "c8f2693a-1867-492e-b5a7-2305d42837fb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -158,7 +157,7 @@
       "metadata": {
         "id": "zCDURIavHXqp"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
