--- a/notebookes/DistributionsOfAspectsOfData.ipynb
+++ b/notebookes/DistributionsOfAspectsOfData.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/aminehd/AminehTechnicalWritings/blob/main/DistributionsOfAspectsOfData.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/aminehd/AminehTechnicalWritings/blob/main/notebookes/DistributionsOfAspectsOfData.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -792,7 +792,7 @@
     {
       "cell_type": "code",
       "source": [
-        "np.savez(local_clone + '/population.npz', population)\n"
+        "np.savez(local_clone + '/data/population.npz', population)\n"
       ],
       "metadata": {
         "id": "R_f-urlgW9EV"
