plan remove sampling code to utils

--- a/notebookes/SamplingStatsAndDistros.ipynb
+++ b/notebookes/SamplingStatsAndDistros.ipynb
@@ -85,7 +85,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -163,7 +163,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Now let's sample responses for given set of predictors. I use a method called `sample_response` that takes set of predictors, the whole population, as well as a rand generator. HERE!!!"
+        "Now let's sample responses for given set of predictors. I use a method called `sample_response` that takes set of predictors, the whole population, as well as a rand generator."
       ],
       "metadata": {
         "id": "ethR8N-tJBj2"
@@ -179,6 +179,8 @@
     {
       "cell_type": "code",
       "source": [
+        "HERE!!!!!!! remove this logic and reuse sampler builder.\n",
+        "\n",
         "n_repeat = len(population[:,0]) // len(distinct_xs)\n",
         "\n",
         "rand_gen = np.random.default_rng(2)\n",
