Explain Linear regression is solving linear equations approximately.

--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -156,9 +156,20 @@
       "source": [
         "### Linear regression is solving linear equations approximately\n",
         "\n",
+        "Plotting the responses versus predictors reveals a noticeable linear pattern, both in the sample and population datasets. The process of finding the linear relationship between predictors and responses is calle fitting a linear model.\n",
         "\n",
-        "Fitting a linear model to data is similar to solving n equations with p variables, with one small difference. We can add an error term to the right side of the equation, so the system always has a solution. However, the trade-off is that there will always be an error, sometimes less sometimes more.\n",
-        "Adding error term was part of [method of least squars](https://en.wikipedia.org/wiki/Least_squares#:~:text=The%20first%20clear%20and%20concise,the%20shape%20of%20the%20Earth.) invented by  Legendre, french matematician.\n",
+        "\n",
+        "Fitting a linear model to data is similar to solving n equations with p variables, with one small difference: fitting linear model is approximate, while solving system of linear equations is exact solutions.\n",
+        "\n",
+        "\n",
+        "Going back to history of linear regression, the first use of fitting linear models to observed data originated from the field of astronomy. Scientists attempted to determine fixed parameters related to the positions and motions of celestial bodies based on astronomical data, under the assumption of a linear model.\n",
+        "However, these observations were subject to errors, leading to instances where the equations had no solutions.\n",
+        "\n",
+        "Their trick was to introduce an error term, ensuring that the equations would always have at least one solution.\n",
+        "\n",
+        "Likewise, we can add an error term to the right side of our equations, ensuring that the system always has a solution. However, the caveat is that multiple solutions will exists, each with different error term values and we need to find a criteria that which set of errors are better overall. Or alternatively we can decide  which solution is more likely to be the correct one, if we have a distribution on the error terms.  But hold off on that that part and let's focus on the system of linear equations for now. (HERE!!!)\n",
+        "\n",
+        "\n",
         "\n",
         "The equations for a given sample of size n looks likes:\n",
         "$$\n",
