To do for next time

--- a/notebookes/SamplingStatsAndDistros.ipynb
+++ b/notebookes/SamplingStatsAndDistros.ipynb
@@ -66,10 +66,10 @@
       ],
       "metadata": {
         "id": "noffZ0wtGZku",
-        "outputId": "045d5aeb-7d63-4e72-f1e8-5c45663df13c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "045d5aeb-7d63-4e72-f1e8-5c45663df13c"
       },
       "execution_count": 1,
       "outputs": [
@@ -163,6 +163,8 @@
     {
       "cell_type": "code",
       "source": [
+        "### HERE!!!! Move this to response sampler as a method called predictor sampler, and then change the class name and it's method name\n",
+        "## develop useful utilities\n",
         "distinct_xs = np.unique(population[:, 0])\n",
         "sample_size = 100\n",
         "x_samp_index = np.linspace(0, len(distinct_xs)-1, sample_size).astype(int)\n",
@@ -966,6 +968,7 @@
     },
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "machine_shape": "hm",
       "gpuType": "V100",
       "include_colab_link": true
