Add RSS to the algebraic def

--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -19,7 +19,8 @@
         "  - Load data in repo\n",
         "  - Linear regression is solving linear equations approximately.\n",
         "  - Matrix notation of linear regression.\n",
-        "  - Different algebraic ways one can view the problem.\n",
+        "   - Different algebraic ways one can view the problem.\n",
+        "  - How to solve uncertain set of linear equations?\n",
         "  - The line fitting.\n",
         "  - Connection between method of least squares and the distribution of error terms.\n",
         "- Conclusion:"
@@ -48,10 +49,29 @@
         "!git config --global user.name \"Amineh Dadsetan\""
       ],
       "metadata": {
-        "id": "19DE6S_AX97z"
+        "id": "19DE6S_AX97z",
+        "outputId": "a959eeba-ef38-41a7-fc83-d737cf763bc1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fatal: cannot change to 'AminehTechnicalWritings': No such file or directory\n",
+            "Cloning into 'AminehTechnicalWritings'...\n",
+            "remote: Enumerating objects: 307, done.\u001b[K\n",
+            "remote: Counting objects: 100% (166/166), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (74/74), done.\u001b[K\n",
+            "remote: Total 307 (delta 95), reused 153 (delta 89), pack-reused 141\u001b[K\n",
+            "Receiving objects: 100% (307/307), 3.59 MiB | 9.39 MiB/s, done.\n",
+            "Resolving deltas: 100% (174/174), done.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -304,6 +324,49 @@
       ],
       "metadata": {
         "id": "j61xxxCfAC2X"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ebHB_8C1ybVN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### How to solve uncertain set of linear equations?\n",
+        "We saw that finding regression coefficients is like solving $n$ equaltions with $p + 1$ variables but with some uncertainty.\n",
+        "\n",
+        "If there was no uncertainty involved the space of all such solutions is the dual of (p + 1 ) dimensional space . Then the answer solution for coefficients is the kernel of the Linear Transformation $X$ defined above.\n",
+        "\n",
+        "However, with uncertainty in picture, the kernel is not answer anymore. Now the problem definition changes a bit. So We have the trasnfromation X and the function RSS defined on ... (HERE!!!!!!!!!!!!! continue define the problem algebraically)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "e7HXhSq8yfCc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "XEJ7vNrd1E6E"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Line fitting"
+      ],
+      "metadata": {
+        "id": "5EkDqnBoybzL"
       }
     },
     {
