--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -14,12 +14,12 @@
       "cell_type": "markdown",
       "source": [
         "Outline\n",
+        "- Load data in repo\n",
         "- Introduction (Purpose + scope)\n",
         "- Body\n",
-        "  - Load data in repo\n",
         "  - Linear regression is solving linear equations approximately.\n",
-        "  - Matrix notation of linear regression.\n",
-        "   - Different algebraic ways one can view the problem.\n",
+        "     - Matrix notation of linear regression equations.\n",
+        "     - Solve \" X β = y\"\n",
         "  - How to solve uncertain set of linear equations?\n",
         "  - The line fitting.\n",
         "  - Connection between method of least squares and the distribution of error terms.\n",
@@ -49,34 +49,23 @@
         "!git config --global user.name \"Amineh Dadsetan\""
       ],
       "metadata": {
-        "id": "19DE6S_AX97z",
-        "outputId": "a959eeba-ef38-41a7-fc83-d737cf763bc1",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "19DE6S_AX97z"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "fatal: cannot change to 'AminehTechnicalWritings': No such file or directory\n",
-            "Cloning into 'AminehTechnicalWritings'...\n",
-            "remote: Enumerating objects: 307, done.\u001b[K\n",
-            "remote: Counting objects: 100% (166/166), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (74/74), done.\u001b[K\n",
-            "remote: Total 307 (delta 95), reused 153 (delta 89), pack-reused 141\u001b[K\n",
-            "Receiving objects: 100% (307/307), 3.59 MiB | 9.39 MiB/s, done.\n",
-            "Resolving deltas: 100% (174/174), done.\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
         "## Introduction\n",
+        "In this notebook, I would like to go through the linear regression concepts. It's in first chapter of all AI/ML books. Usually the author starts very inncocently by showing some plots of dots, scattered approximately along a line.\n",
+        "\n",
+        " Then they flash a bunch of matrixes at you. Just a bit before end of the chapter,  they make an apeal to you to believe it was all about Maximum liklyhood framework and normal probability distribution, all along.\n",
+        "\n",
+        "  Maybe it's only me, but I'm always lost after the pages with 10 lines of matrix notation.\n",
+        " That's why I wanted to gain a cohesive understanding of the whole flow. This notebook is what I have learnt about it.\n",
+        "\n",
+        "\n",
         "I have created a [jupyter notebook](https://colab.research.google.com/github/aminehd/AminehTechnicalWritings/blob/main/DistributionsOfAspectsOfData.ipynb) to generate some random data.\n",
         "\n",
         "At the end of each notebook, I save artifact to the repo so we can load them in any subsequent notebook. 👾 📦\n",
@@ -179,7 +168,7 @@
         "Plotting the responses versus predictors reveals a noticeable linear pattern, both in the sample and population datasets. The process of finding the linear relationship between predictors and responses is calle fitting a linear model.\n",
         "\n",
         "\n",
-        "Fitting a linear model to data is similar to solving n equations with p variables, with one small difference: fitting linear model is approximate, while solving system of linear equations is exact solutions.\n",
+        "Fitting a linear model to data is similar to solving n equations with p variables, with the goal of finding the coefficient.  There is  one small difference: fitting linear model is approximate, while solving system of linear equations is exact solutions.\n",
         "\n",
         "\n",
         "Going back to history of linear regression, the first use of fitting linear models to observed data originated from the field of astronomy. Scientists attempted to determine fixed parameters related to the positions and motions of celestial bodies based on astronomical data, under the assumption of a linear model.\n",
@@ -187,7 +176,7 @@
         "\n",
         "Their trick was to introduce an error term, ensuring that the equations would always have at least one solution.\n",
         "\n",
-        "Likewise, we can add an error term to the right side of our equations, ensuring that the system always has a solution. However, the caveat is that multiple solutions will exists, each with different error term values and we need to find a criteria that which set of errors are better overall. Or alternatively we can decide  which solution is more likely to be the correct one, if we have a distribution on the error terms.  But hold off on that that part and let's focus on the system of linear equations for now. (HERE!!!)\n",
+        "Likewise, we can add an error term to the right side of our equations, ensuring that the system always has a solution. However, the caveat is that multiple solutions will exists, each with different error term values and we need to find a criteria that which set of errors are better overall. Or alternatively we can decide  which solution is more likely to be the correct one, if we have a distribution on the error terms.  But hold off on that that part and let's focus on the system of linear equations for now.\n",
         "\n",
         "\n",
         "\n",
@@ -253,10 +242,52 @@
         "+ ϵ\n",
         "$$\n",
         "\n",
+        "For ease, we refer to the above augmented matrix as $\\tilde{x}$:\n",
+        "$$\n",
+        "\\tilde{X} = \\begin{bmatrix}\n",
+        "1 & x_{11} & x_{12} & \\ldots & x_{1p} \\\\\n",
+        "1 & x_{21} & x_{22} & \\ldots & x_{2p} \\\\\n",
+        "\\vdots &\\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+        "1 & x_{n1} & x_{n2} & \\ldots & x_{np}\n",
+        "\\end{bmatrix}\n",
+        "$$\n",
+        "With these being said,  finding coefficient in a linear regression is to find the unknown (p + 1) dimensional vector $\\beta$ in the equation $\\tilde{X} \\beta =  y$ , where $\\beta$ and $y$ are both vecotrs.\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "P3AqCTUnDqE_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Solve \" X β = y\"\n",
         "There is two linear algebraic interpretations of this:\n",
         "\n",
+        "**First algebraic view**\n",
         "\n",
-        "First interpretation is to have $p$ n-dimensional vectors where $\\mathbf{x}_0 = [1, 1, ..., 1]^T$ and for $j >0 $, $\\mathbf{x}_j = [x_{1i}, \\ldots, x_{nj}]^T$. Then one can expand the above formula to: 🤯\n",
+        "The first algebraic view can be that there is n vectors, each p + 1 dimensions. For $ 1< i < n$ , $x_i = [y_i, x_{i,1}, ..., x_{ip}]^T$.\n",
+        "\n",
+        "\n",
+        "But you are not looking for linear combinations of x_i's to equal to equal to y. In fact you are looking for a plane with p dimensions that all x_i exists on it. consequently you are looking for p scalars that identify such plain.\n",
+        "So we are hoping they all fall on a p dimensional plane becuase we think there are p basis that can span all n points. However the p dimensional plain doesnt have to pass vector 0, so we need p + 1 such scalars to determine where  the plain meets y axes for when all x's are 0.\n",
+        "these  p + 1 numbers are going to determine such plain.\n",
+        "\n",
+        "while it is nice to visualize the data point using second view, we mainly use the first view to solve the system of equations. Let's find such hyperplane for our sample data points ( or n vectors of 2-dimensional )\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Pxpe3yEJhAt_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Second algebraic view**\n",
+        "Second interpretation is to have $p$ n-dimensional vectors where $\\mathbf{x}_0 = [1, 1, ..., 1]^T$ and for $j >0 $, $\\mathbf{x}_j = [x_{1i}, \\ldots, x_{nj}]^T$. Then one can expand the above formula to: 🤯\n",
         "\n",
         "$$\n",
         "y =\n",
@@ -302,28 +333,45 @@
         "\n",
         "Also, one one can see, the more feature there is compared to the sample size(n), the liklier it gets to have an answer because the vectors are gonna span more of the space.\n",
         "\n",
-        "\n",
-        "\n",
         "\n"
       ],
       "metadata": {
-        "id": "P3AqCTUnDqE_"
+        "id": "j61xxxCfAC2X"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "The second algebraic view can be that there is n vectors, each p + 1 dimensions. For $ 1< i < n$ , $x_i = [y_i, x_{i,1}, ..., x_{ip}]^T$.\n",
+        "**Solution**\n",
         "\n",
         "\n",
-        "But you are not looking for linear combinations of x_i's to equal to equal to y. In fact you are looking for a plane with p dimensions that all x_i exists on it. consequently you are looking for p scalars that identify such plain.\n",
-        "So we are hoping they all fall on a p dimensional plane becuase we think there are p basis that can span all n points. However the p dimensional plain doesnt have to pass vector 0, so we need p + 1 such scalars to determine where  the plain meets y axes for when all x's are 0.\n",
-        "these  p + 1 numbers are going to determine such plain.\n",
+        "Let's solve this if they were no erro and uncertainty.\n",
+        "If y is in column space of $\\tilde{X}$, the solution is ::\n",
         "\n",
-        "while it is nice to visualize the data point using second view, we mainly use the first view to solve the system of equations. Let's find such hyperplane for our sample data points ( or n vectors of 2-dimensional )\n"
+        "\n",
+        "HERE!!! what is the solution for no error case? fix below\n",
+        "\n",
+        "A question arise that why this solution needs $\\beta$  to be in the column space of $\\tilde{X}$? Can't we just use the formula?\n",
+        "\n",
+        "\n",
+        "Actually, if \\(b\\) is not in the column space of \\(X\\) and you try to compute \\(bX^{-1}\\) as a solution when \\(X\\) is a square and invertible matrix, the situation is different than you might expect.\n",
+        "\n",
+        "Here’s a breakdown:\n",
+        "\n",
+        "1. **Square and Invertible \\(X\\)**:\n",
+        "   - When \\(X\\) is square (n=p) and invertible, \\(bX^{-1}\\) is a valid computation and will give a vector \\(a\\).\n",
+        "   - In this specific case, every \\(b\\) is always in the column space of \\(X\\), because an invertible matrix transforms the entire space. That is, the column space of an invertible \\(n \\times n\\) matrix \\(X\\) is \\(R^n\\), the entire n-dimensional space.\n",
+        "   - Therefore, for invertible \\(X\\), the equation \\(aX = b\\) always has a solution \\(a = bX^{-1}\\), regardless of \\(b\\).\n",
+        "\n",
+        "2. **Non-Square or Non-Invertible \\(X\\)**:\n",
+        "   - If \\(X\\) is not square or not invertible (meaning \\(X\\) does not cover all of \\(R^n\\) or maps some vectors to zero), then the product \\(bX^{-1}\\) isn’t generally possible since \\(X^{-1}\\) does not exist.\n",
+        "   - In such cases, \\(b\\) needs to be checked against the column space of \\(X\\) if \\(X\\) is non-square. If \\(b\\) is not in the column space of \\(X\\), then there is no solution because there's no \\(a\\) that can multiply with \\(X\\) to yield \\(b\\).\n",
+        "   - For non-invertible \\(X\\), you would typically use the Moore-Penrose pseudoinverse \\(X^+\\) to find a least squares solution \\(a = bX^+\\), but this only minimizes \\(||aX - b||\\) and does not necessarily solve \\(aX = b\\) exactly unless \\(b\\) is in the column space of \\(X\\).\n",
+        "\n",
+        "If you meant that \\(bX^{-1}\\) is an answer even if \\(b\\) is not in the column space, that situation doesn’t arise with square, invertible matrices because \\(b\\) will always be in the column space due to the properties of invertible matrices. If \\(X\\) is non-invertible or non-square, the inverse \\(X^{-1}\\) does not exist, and other methods like pseudoinverses or least squares solutions are used depending on the specifics of \\(X\\) and \\(b\\).\n"
       ],
       "metadata": {
-        "id": "j61xxxCfAC2X"
+        "id": "cwhNfPNNkFAH"
       }
     },
     {
